--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,11 @@ body{
     color: #289BDE;
     font-size: 25px;
 }
+.footer-bg{
+    background-color: #161616;
+    height: 350px;
+    
+}
 
 @media  screen and (max-width:576px) {
     .tech-cover-img>img{
